# Compiler-llvm

./: .gitignore  a.out  bf.c++  segfault.c
MyLLVMPass/MyLLVMPass/: CMakeLists.txt  test.bc  test.c  test.ll
MyLLVMPass/MyLLVMPass/include/llvm/Transforms/Utils/: HelloWorld.h
MyLLVMPass/MyLLVMPass/lib/Transforms/: CMakeLists.txt
MyLLVMPass/MyLLVMPass/lib/Transforms/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
my-llvm-pass/: CMakeLists.txt  Makefile
my-llvm-pass/input/: file.c  file01.c  hello.c
my-llvm-pass/lib/: FindPrintfPass.cpp  InstructorCounter.cpp  ReallocPass.cpp  ShiftUsePass.cpp  asan_runtime_simple.cpp
my-llvm-pass/output/: my_program
outoftree/: CMakeLists.txt  a.out  transformed.ll  transformed.out
outoftree/include/: AsanPass.h  countlgvars.h  helloworld.h  logger.h
outoftree/src/: AsanPass.cpp  CountLGvars.cpp  helloworld.cpp  logger.cpp
outoftree/test/: sample.c  sample.ll  test.asan.ll  test.c  test.ll
outoftree/test/test2/: file1.c  run.sh
